@@ -52,6 +52,7 @@ cond5.test \
 cond6.test \
 cond7.test \
 cond8.test \
+cond9.test \
 condman.test \
 condman2.test \
 conf2.test \
