@@ -1,5 +1,8 @@
 1999-04-27  Tom Tromey  <tromey@cygnus.com>
 
+	* cond9.test: New file.  From Raja R Harinath.
+	* Makefile.am (TESTS): Added cond9.test.
+
 	* pluseq8.test: New file.
 	* Makefile.am (TESTS): Added pluseq8.test.
 
